@@ -7,12 +7,13 @@
   <groupId>org.lbogdanov.mvp</groupId>
   <artifactId>mvp</artifactId>
   <version>0.1</version>
+<!--  <packaging>jlink</packaging>-->
 
   <name>MVP</name>
 
   <properties>
-    <javafx.version>16</javafx.version>
-    <kotlin.version>1.5.20</kotlin.version>
+    <javafx.version>17-ea+16</javafx.version>
+    <kotlin.version>1.5.21</kotlin.version>
 
     <mainClass>mvp.AppKt</mainClass>
 
@@ -22,6 +23,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>io.github.palexdev</groupId>
+      <artifactId>materialfx</artifactId>
+      <version>11.12.0</version>
+    </dependency>
     <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
@@ -69,7 +75,13 @@
           </execution>
         </executions>
         <configuration>
+<!--          <compilerPlugins>-->
+<!--            <plugin>no-arg</plugin>-->
+<!--          </compilerPlugins>-->
           <jvmTarget>${maven.compiler.release}</jvmTarget>
+<!--          <pluginOptions>-->
+<!--            <option>no-arg:annotation=jakarta.xml.bind.annotation.XmlRootElement</option>-->
+<!--          </pluginOptions>-->
           <sourceDirs>
             <sourceDirectory>src/main/kotlin</sourceDirectory>
           </sourceDirs>
@@ -97,33 +109,76 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.5</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.0.0</version>
         <executions>
           <execution>
-            <phase>package</phase>
             <goals>
-              <goal>jlink</goal>
+              <goal>java</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
-          <compress>2</compress>
-          <jmodsPath>${project.build.directory}/modules</jmodsPath>
-          <launcher>mvp</launcher>
           <mainClass>${mainClass}</mainClass>
-          <noHeaderFiles>true</noHeaderFiles>
-          <noManPages>true</noManPages>
-          <stripDebug>true</stripDebug>
-          <options>
-            <option>--add-opens</option>
-            <option>java.base/java.lang.reflect=com.jfoenix</option>
-            <option>--add-opens</option>
-            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
-          </options>
         </configuration>
       </plugin>
+<!--      <plugin>-->
+<!--        <artifactId>maven-jlink-plugin</artifactId>-->
+<!--        <version>3.1.0</version>-->
+<!--        <extensions>true</extensions>-->
+<!--        <configuration>-->
+<!--          <compress>2</compress>-->
+<!--          <limitModules>-->
+<!--&lt;!&ndash;              java.datatransfer@15.0.2&ndash;&gt;-->
+<!--&lt;!&ndash;              java.desktop@15.0.2&ndash;&gt;-->
+<!--&lt;!&ndash;              java.logging@15.0.2&ndash;&gt;-->
+<!--&lt;!&ndash;              java.prefs@15.0.2&ndash;&gt;-->
+<!--&lt;!&ndash;              java.scripting@15.0.2&ndash;&gt;-->
+<!--&lt;!&ndash;              java.xml@15.0.2&ndash;&gt;-->
+<!--              <module>com.jfoenix</module>-->
+<!--              <module>com.sun.jna</module>-->
+<!--              <module>javafx.base</module>-->
+<!--              <module>javafx.controls</module>-->
+<!--              <module>javafx.fxml</module>-->
+<!--              <module>javafx.graphics</module>-->
+<!--              <module> kotlin.stdlib</module>-->
+<!--&lt;!&ndash;              <module>mvp@0.1</module>&ndash;&gt;-->
+<!--              <module>jdk.unsupported</module>-->
+<!--          </limitModules>-->
+<!--          <modulePaths>-->
+<!--            <modulePath>${project.build.directory}/modules/</modulePath>-->
+<!--          </modulePaths>-->
+<!--          <stripDebug>true</stripDebug>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
+<!--      <plugin>-->
+<!--        <groupId>org.openjfx</groupId>-->
+<!--        <artifactId>javafx-maven-plugin</artifactId>-->
+<!--        <version>0.0.5</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>jlink</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--        <configuration>-->
+<!--          <compress>2</compress>-->
+<!--          <jmodsPath>${project.build.directory}/modules</jmodsPath>-->
+<!--          <launcher>mvp</launcher>-->
+<!--          <mainClass>${mainClass}</mainClass>-->
+<!--          <noHeaderFiles>true</noHeaderFiles>-->
+<!--          <noManPages>true</noManPages>-->
+<!--          <stripDebug>true</stripDebug>-->
+<!--          <options>-->
+<!--            <option>&#45;&#45;add-opens java.base/java.lang.reflect=com.jfoenix</option>-->
+<!--            <option>&#45;&#45;add-opens javafx.base/com.sun.javafx.event=com.jfoenix</option>-->
+<!--            <option>-Xmx64m</option>-->
+<!--          </options>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 
